tests/good/in/closure.vshs
// Closure
f x :: Int -> Int -> Int =
	let g :: Int -> Int = \(y :: Int) -> y+x in
		g;

