tests/bad/noLambdaType.vshs
// Incorrect because of lack of type in lambda function.
f :: Int -> Int = \x -> x*2